@@ -5,5 +5,4 @@
 db.sqlite
 dist/
 docs/_build/
-app_media/
-app_static/
+*.tox/
