@@ -4,4 +4,5 @@ Martin Brochhaus
 
 Contributors (in alphabetical order)
 
+* Tobias Lorenz
 * Your name could stand here :)
