@@ -1,16 +1,0 @@
-[run]
-source =
-    forms_ajaxified
-branch = True
-omit =
-    ./*
-    ../urls.py
-    ../migrations/*
-
-[report]
-exclude_lines =
-    pragma: no cover
-    def __repr__
-    raise AssertionError
-    raise NotImplementedError
-    if __name__ == .__main__.:
