@@ -1,4 +1,0 @@
-"""Factories for the forms_ajaxified app."""
-# import factory
-
-# from .. import models
