@@ -1,3 +1,0 @@
-[flake8]
-ignore = F999,E501,E128,E124
-exclude = .git,*/migrations/*,*/static/CACHE/*
