@@ -1,10 +1,8 @@
-django-nose
 coverage
 django-coverage
 ipdb
 flake8
-fabric
-factory_boy
+fabric3
+mixer
 mock
-selenium
-south
+tox
