@@ -1,0 +1,10 @@
+[tox]
+envlist = py27-django{18,19},py35-django19
+
+[testenv]
+usedevelop = True
+deps =
+    django18: Django>=1.8,<1.9
+    django19: Django>=1.9,<1.10
+    -rtest_requirements.txt
+commands = python runtests.py
