@@ -1,5 +1,6 @@
 === 0.1.X (ongoing, to be released as 0.2) ===
 
+- prepared app for Django 1.9 and Python 3.5
 - minor fix in AjaxFormViewMixin
 - added finished callback to options, that allows to execute functions after
   successful initialization
